make sure home links are visible

--- a/splashPage/assets/css/home.css
+++ b/splashPage/assets/css/home.css
@@ -27,6 +27,7 @@ body {
 	position:relative;
 	top:49px;
 	left:-200px;
+	overflow: visible !important; 
 }
 #inConversation{
 	background: url("../img/inconversation.png") no-repeat;
@@ -36,6 +37,7 @@ body {
 	position:relative;
 	top:0;
 	left:854px;
+	overflow: visible !important; 
 }
 
 #centerForDiplomacy{
@@ -46,6 +48,7 @@ body {
 	position:relative;
 	top:0;
 	left:1000px;
+	overflow: visible !important; 
 }
 
 #homeLinks{
